navbar mobile overflow fix

--- a/src/components/header/nav-bar-mobile/nav-bar-mobile.module.scss
+++ b/src/components/header/nav-bar-mobile/nav-bar-mobile.module.scss
@@ -8,9 +8,10 @@
         height: 100vh;
         width: 100%;
         z-index: 49;
+        padding-top: 100px;
         .itemContainer {
             width: 75%;
-            margin: 10px;
+            margin: 10px auto;
             h2 {
                 color: var(--blue);
                 width: 100%;
@@ -28,6 +29,10 @@
             }
             border-radius: 5px;
             border: 1px solid var(--green);
+        }
+        .scrollableContainer {
+            width: 100%;
+            overflow: auto;
         }
     }
     
